--- a/Server/package.json
+++ b/Server/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch ./app.js",
+    "dev:json": "node --watch ./server-with-json.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
