--- a/client-next/package.json
+++ b/client-next/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-pdf/renderer": "^3.1.14",
     "@svgr/webpack": "^8.1.0",
+    "formik": "^2.4.5",
     "next": "14.0.4",
     "react": "^18",
     "react-datepicker": "^4.25.0",
