--- a/client-next/package.json
+++ b/client-next/package.json
@@ -9,27 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-pdf/renderer": "3.3.8",
-    "@reduxjs/toolkit": "2.2.2",
-    "@svgr/webpack": "8.1.0",
-    "formik": "2.4.5",
-    "next": "14.0.4",
-    "react": "18",
-    "react-datepicker": "4.25.0",
-    "react-dom": "18",
-    "react-redux": "9.1.0",
-    "zod": "3.22.4"
+    "@react-pdf/renderer": "^3.3.8",
+    "@reduxjs/toolkit": "^2.2.2",
+    "@svgr/webpack": "^8.1.0",
+    "formik": "^2.4.5",
+    "next": "^14.0.4",
+    "react": "^18",
+    "react-datepicker": "^4.25.0",
+    "react-dom": "^18",
+    "react-redux": "^9.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "20",
-    "@types/react": "18",
-    "@types/react-dom": "18",
-    "autoprefixer": "10.0.1",
-    "daisyui": "4.4.23",
-    "eslint": "8",
-    "eslint-config-next": "14.0.4",
-    "postcss": "8",
-    "tailwindcss": "3.3.0",
-    "typescript": "5"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "daisyui": "^4.4.23",
+    "eslint": "^8",
+    "eslint-config-next": "^14.0.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
