--- a/client-next/package.json
+++ b/client-next/package.json
@@ -14,6 +14,7 @@
     "@svgr/webpack": "^8.1.0",
     "formik": "^2.4.5",
     "next": "14.0.4",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
