--- a/client-next/package.json
+++ b/client-next/package.json
@@ -19,6 +19,7 @@
     "react-datepicker": "^4.25.0",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
+    "sweetalert2": "^11.14.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
