--- a/client-next/package.json
+++ b/client-next/package.json
@@ -23,6 +23,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
@@ -31,6 +32,7 @@
     "daisyui": "^4.4.23",
     "eslint": "^8",
     "eslint-config-next": "^14.0.4",
+    "fs-extra": "^11.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
