--- a/client-next/package.json
+++ b/client-next/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
+    "react-to-print": "^3.0.1",
     "sweetalert2": "^11.14.1",
     "zod": "^3.22.4"
   },
